# CHROME-LAB-SLU-Data-Share

THRI2026_VJS_Demo/catkin_ws/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
THRI2026_VJS_Demo/catkin_ws/catkin_ws/devel/: .catkin
THRI2026_VJS_Demo/catkin_ws/catkin_ws/devel/.private/joystick/: .catkin
THRI2026_VJS_Demo/catkin_ws/catkin_ws/devel/.private/logitech_f710_joy_ros/: .catkin  local_setup.sh  setup.sh
THRI2026_VJS_Demo/catkin_ws/catkin_ws/devel/.private/quori_gui/: .catkin  .rosinstall  local_setup.sh  setup.sh
THRI2026_VJS_Demo/catkin_ws/catkin_ws/devel/.private/quori_interactions/: .catkin  .rosinstall  local_setup.sh  setup.sh
THRI2026_VJS_Demo/catkin_ws/catkin_ws/devel/.private/ros_stt/: .catkin  .rosinstall  local_setup.sh  setup.sh
THRI2026_VJS_Demo/catkin_ws/catkin_ws/devel/include/quori_gui/: Opcmd.h
THRI2026_VJS_Demo/catkin_ws/catkin_ws/devel/lib/pkgconfig/: joystick.pc  (+4 more)
THRI2026_VJS_Demo/catkin_ws/catkin_ws/src/: offline.sh  run_quori_setup.sh  skipping
THRI2026_VJS_Demo/catkin_ws/catkin_ws/src/joystick/: package.xml
THRI2026_VJS_Demo/catkin_ws/catkin_ws/src/quori_gui/: CMakeLists.txt
THRI2026_VJS_Demo/catkin_ws/catkin_ws/src/quori_interactions/: CMakeLists.txt
THRI2026_VJS_Demo/catkin_ws/catkin_ws/src/ros_stt/: CMakeLists.txt  README.md
THRI2026_VJS_Demo/catkin_ws/catkin_ws/src/ros_stt/GPT/: app.py
THRI2026_VJS_Demo/catkin_ws/catkin_ws/src/ros_stt/launch/: stt.launch
THRI2026_VJS_Demo/catkin_ws/catkin_ws/src/ros_stt/scripts/: mic_toggle.py  quori-intent-classifier.py  stt.py  stt_ros_model_downloader.py
(+125 files in other folders)
